==> tiennx3/STM32F1_MPU6050/MPU6050/MPU6050.c <==
#include "MPU6050.h"
#include "stdint.h"

void MPU6050_I2C_Init(void)
{
	#ifdef FAST_I2C_MODE
	#define I2C_SPEED_MODE 400000
	#define I2C_DUTYCYCLE I2C_DUTYCYCLE_16_9
	#else
	#define I2C_SPEED_MODE 100000
	#define I2C_DUTYCYCLE I2C_DUTYCYCLE_2
	#endif
  hi2c1.Instance = I2C1;
  hi2c1.Init.ClockSpeed = I2C_SPEED_MODE;
  hi2c1.Init.DutyCycle = I2C_DUTYCYCLE;
  hi2c1.Init.OwnAddress1 = 0;
  hi2c1.Init.AddressingMode = I2C_ADDRESSINGMODE_7BIT;
  hi2c1.Init.DualAddressMode = I2C_DUALADDRESS_DISABLE;
  hi2c1.Init.OwnAddress2 = 0;
  hi2c1.Init.GeneralCallMode = I2C_GENERALCALL_DISABLE;
  hi2c1.Init.NoStretchMode = I2C_NOSTRETCH_DISABLE;
  if (HAL_I2C_Init(&hi2c1) != HAL_OK)
  {
		_Error_Handler(__FILE__, __LINE__);
     // thoong bao loi len led 
  }

}

NT_MPU6050_Result_t MPU6050_Initialize(NT_MPU6050_Device_t DeviceNumber,NT_MPU6050_Accelerometer_t AccelerometerSensitivity , NT_MPU6050_Gyroscope_t GyroscopeSensitivity) 
{
  
  Init_MPU6050.Device_t=DeviceNumber;
  Init_MPU6050.Accelerometer_t=AccelerometerSensitivity;
  Init_MPU6050.Gyroscope_t= GyroscopeSensitivity;
  if(AccelerometerSensitivity == NT_MPU6050_Accelerometer_2G)
    {
      Init_MPU6050.ACCEL_LSB_t= NT_MPU6050_ACCEL_LSB_2;
    }
  if(AccelerometerSensitivity == NT_MPU6050_Accelerometer_4G)
    {
      Init_MPU6050.ACCEL_LSB_t= NT_MPU6050_ACCEL_LSB_4;
    }
  if(AccelerometerSensitivity == NT_MPU6050_Accelerometer_8G)
    {
      Init_MPU6050.ACCEL_LSB_t= NT_MPU6050_ACCEL_LSB_8;
    }
  if(AccelerometerSensitivity == NT_MPU6050_Accelerometer_16G)
    {
      Init_MPU6050.ACCEL_LSB_t= NT_MPU6050_ACCEL_LSB_16;
    }
	MPU6050_I2C_Init();
	//NEW
		MPU6050_I2C_ByteWrite(Init_MPU6050.Device_t,MPU6050_RA_PWR_MGMT_1, 0x00);
		MPU6050_I2C_ByteWrite(Init_MPU6050.Device_t,MPU6050_RA_SMPLRT_DIV, 0x4);
		MPU6050_SetFullScaleGyroRange(MPU6050_GYRO_FS_1000);
		MPU6050_SetFullScaleAccelRange(MPU6050_ACCEL_FS_16);
		
//	MPU6050_SetClockSource(MPU6050_CLOCK_PLL_XGYRO);
//	MPU6050_SetFullScaleGyroRange(MPU6050_GYRO_FS_1000);
//	MPU6050_SetFullScaleAccelRange(MPU6050_ACCEL_FS_16);
//	MPU6050_SetSleepModeStatus(DISABLE);
//	
//	MPU6050_setSleepDisabled();
//	HAL_Delay(10);

	//MPU6050_WriteBits(Init_MPU6050.Device_t,MPU6050_RA_PWR_MGMT_1, MPU6050_PWR1_CLKSEL_BIT, MPU6050_PWR1_CLKSEL_LENGTH, MPU6050_CLOCK_PLL_XGYRO);
//	//set DLPF bandwidth to 42Hz
	//MPU6050_WriteBits(Init_MPU6050.Device_t, MPU6050_RA_CONFIG, MPU6050_CFG_DLPF_CFG_BIT, MPU6050_CFG_DLPF_CFG_LENGTH,MPU6050_DLPF_BW_256 ); //MPU6050_DLPF_BW_42);
//    //set sampe rate
	//MPU6050_I2C_ByteWrite(Init_MPU6050.Device_t,MPU6050_RA_SMPLRT_DIV, 0x04); //1khz / (1 + 4) = 200Hz
//	//set gyro range
//	MPU6050_WriteBits(Init_MPU6050.Device_t,MPU6050_RA_GYRO_CONFIG, MPU6050_GCONFIG_FS_SEL_BIT, MPU6050_GCONFIG_FS_SEL_LENGTH, Init_MPU6050.Gyroscope_t);
//	//set accel range
//	MPU6050_WriteBits(Init_MPU6050.Device_t,MPU6050_RA_ACCEL_CONFIG, MPU6050_ACONFIG_AFS_SEL_BIT, MPU6050_ACONFIG_AFS_SEL_LENGTH,Init_MPU6050.Accelerometer_t);
  return NT_MPU6050_Result_Ok;
}

void MPU6050_I2C_ByteWrite(uint8_t slaveAddr , uint8_t writeAddr, uint8_t pBuffer)
{
	//HAL_I2C_Master_Transmit(&I2C_MPU6050,0xD0,pBuffer,1,2000);
	HAL_I2C_Mem_Write(&I2C_MPU6050,slaveAddr,writeAddr,I2C_MEMADD_SIZE_8BIT,& pBuffer,1,2000);
}

void MPU6050_I2C_BufferRead(uint8_t slaveAddr,uint8_t* pBuffer, uint8_t readAddr, uint16_t NumByteToRead)
{
 HAL_I2C_Mem_Read(&I2C_MPU6050,slaveAddr,readAddr,I2C_MEMADD_SIZE_8BIT,pBuffer,NumByteToRead,2000);

}
